--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,4 +36,6 @@ jobs:
           # app-dir: ~/project/package-directory/  # If you're requirements.txt isn't in the root directory.
           # pip-dependency-file: test-requirements.txt  # if you have a different name for your requirements file, maybe one that combines your runtime and test requirements.
       - run: echo "A more familiar hi" # We run a similar echo command to above.
+        command: |
+            pipenv run python LFSR.py test
           
