--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,8 +31,18 @@ jobs:
             echo 'export TAG=${CIRCLE_SHA1}' >> $BASH_ENV
             echo 'export IMAGE_NAME=orb-snyk' >> $BASH_ENV && source $BASH_ENV
             pip install --user -r requirements.txt
-            pyinstaller -F hello_world.py
+            pyinstaller -F LFSR.py
             docker build -t $DOCKER_LOGIN/$IMAGE_NAME -t $DOCKER_LOGIN/$IMAGE_NAME:$TAG .
+       - snyk/scan:
+          fail-on-issues: true
+          monitor-on-build: true
+          docker-image-name: $DOCKER_LOGIN/$IMAGE_NAME:$TAG
+          target-file: "Dockerfile"
+          project: ${CIRCLE_PROJECT_REPONAME}/${CIRCLE_BRANCH}-app
+          organization: ${SNYK_CICD_ORGANIZATION}
+      - run:
+          name: Push Docker image to Docker Hub
+          command: |
             echo $DOCKER_PWD | docker login -u $DOCKER_LOGIN --password-stdin
             docker push $DOCKER_LOGIN/$IMAGE_NAME
 workflows:
