--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,7 +16,7 @@ jobs:
       
   build_push_image:
     docker:
-      - image: circleci/buildpack-deps:stretch
+      - image: circleci/python:3.9.0
     steps:
       - checkout
       - setup_remote_docker:
@@ -30,7 +30,7 @@ jobs:
             pip install --user -r requirements.txt
             pyinstaller -F LFSR.py
             echo '$DOCKER_LOGIN/$IMAGE_NAME -t $DOCKER_LOGIN/$IMAGE_NAME:$TAG'
-            docker build -t $DOCKER_LOGIN/$IMAGE_NAME -t $DOCKER_LOGIN/$IMAGE_NAME:$TAG
+            docker build -t $IMAGE_NAME:latest
       - snyk/scan:
           fail-on-issues: true
           monitor-on-build: true
