--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,7 +30,7 @@ jobs:
             pip install --user -r requirements.txt
             pyinstaller -F LFSR.py
             echo '$DOCKER_LOGIN/$IMAGE_NAME -t $DOCKER_LOGIN/$IMAGE_NAME:$TAG'
-            docker build -t $IMAGE_NAME:latest
+            docker build -t $IMAGE_NAME:latest .
       - snyk/scan:
           fail-on-issues: true
           monitor-on-build: true
