--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,14 +25,8 @@ jobs:
           docker_layer_caching: false
       - run:
           name: Build and Push Docker image to Docker Hub
-          command: |
-            echo 'export PATH=~$PATH:~/.local/bin' >> $BASH_ENV
-            echo 'export TAG=${CIRCLE_SHA1}' >> $BASH_ENV
-            echo 'export IMAGE_NAME=orb-snyk' >> $BASH_ENV && source $BASH_ENV
-            pip install --user -r requirements.txt
-            pyinstaller -F LFSR.py
-            echo '$DOCKER_LOGIN/$IMAGE_NAME -t $DOCKER_LOGIN/$IMAGE_NAME:$TAG'
-            docker build -t $DOCKER_LOGIN/$IMAGE_NAME -t $DOCKER_LOGIN/$IMAGE_NAME:$TAG .
+          command: docker build -t $IMAGE_NAME:latest .
+         
       - snyk/scan:
           fail-on-issues: true
           monitor-on-build: true
