--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -60,6 +60,7 @@ commands:
       - run:
           name: "Code analysis"
           command: |
+            export SONAR_RUNNER_OPTS="<< parameters.runner_opts >>"
             eval ./sonar-scanner-<< parameters.engine_version >>/bin/sonar-scanner \
               -Dsonar.host.url=${<< parameters.host_url >>} \
               -Dsonar.login=${<< parameters.login >>} \
@@ -68,72 +69,10 @@ commands:
               -Dsonar.sources=<< parameters.sources >> \
               -Dsonar.exclusions="<< parameters.exclusions >>"
 
-  commit:
-    description: |
-      This command echos the status of the sonarqube scan.
-    parameters:
-      engine-version:
-        description: The SonarQube scanner version.
-        type: string        
-      pull-request-base:
-        description: The pull request base.
-        type: string
-      pull-request-branch:
-        description: The pull request branch.
-        type: string
-      pull-request-key:
-        description: The pull request key.
-        type: string
-      server-url:
-        description: The SonarQube server URL.
-        type: string
-      system-code:
-        description: The Biz-Ops system code.
-        type: string
-      token:
-        description: The SonarQube server token.
-        type: string
-    steps:
-      - run:
-          command: |
-            if [ -z <<parameters.pull-request-key>> ]; then
-              echo "In IF"
-              eval ./sonar-scanner-<<parameters.engine-version>>/bin/sonar-scanner \
-              -Dsonar.projectKey=<<parameters.system-code>> \
-              -Dsonar.sources=. \
-              -Dsonar.host.url=<<parameters.server-url>> \
-              -Dsonar.login=<<parameters.token>>
-            else
-              echo "In else"
-              eval ./sonar-scanner-<<parameters.engine-version>>/bin/sonar-scanner \
-              -Dsonar.projectKey=${<<parameters.system-code>>} \
-              -Dsonar.sources=. \
-              -Dsonar.host.url=${<<parameters.server-url>>} \
-              -Dsonar.login=${<<parameters.token>>} \
-              -Dsonar.pullrequest.key=<<parameters.pull-request-key>> \
-              -Dsonar.pullrequest.branch=<<parameters.pull-request-branch>> \
-              -Dsonar.pullrequest.base=<<parameters.pull-request-base>>
-            fi
-          name: Commit analysis
-        
+  
 jobs:
   analyze:
     parameters:
-      engine-version:
-        type: string
-        default: "4.6.2.2472"
-      pull-request-base:
-        default: ${CIRCLE_PR_RE}
-        description: The pull request base.
-        type: string
-      pull-request-branch:
-        default: ${CIRCLE_BRANCH}
-        description: The pull request branch.
-        type: string
-      pull-request-key:
-        default: ${CIRCLE_PULL_REQUEST}
-        description: The pull request key.
-        type: string
       organization:
         type: env_var_name
         default: SONARQUBE_SERVER_ORGANIZATION
@@ -169,14 +108,6 @@ jobs:
           organization: << parameters.organization >>
           projectKey: << parameters.projectKey >>
           projectBaseDir: ./
-      - commit:
-          engine-version: <<parameters.engine-version>>
-          pull-request-base: <<parameters.pull-request-base>>
-          pull-request-branch: <<parameters.pull-request-branch>>
-          pull-request-key: <<parameters.pull-request-key>>
-          server-url: <<parameters.host_url>>
-          system-code: <<parameters.projectKey>>
-          token: <<parameters.login>>
 
 workflows:
   build_test_deploy:
