--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,12 +1,9 @@
-# This code is licensed from CircleCI to the user under the MIT license.
-# See here for details: https://circleci.com/developer/orbs/licensing
 version: 2.1
-orbs:
-  sonarcloud: sonarsource/sonarcloud@1.0.2
+
 executors:
   scanner:
     docker:
-      - image: alphine:latest
+      - image: alpine:latest
 
 commands:
   setup-environment:
@@ -17,66 +14,97 @@ commands:
           command: |
             apk update
             apk add --no-cache zip openjdk11-jre-headless
-
-  scan:
-    description: Detect bugs and vulnerabilities
+  install-engine:
+    description: "Install Sonarqube scanner"
     parameters:
-      cache_version:
-        default: 1
-        description: increment this value if the cache is corrupted and you want to start with a clean cache
-        type: integer
-      sonar_token_variable_name:
-        default: SONAR_TOKEN
-        description: the name of the environment variable where the SonarCloud API token is stored
-        type: env_var_name
+      engine_version:
+        type: string
+        default: "4.6.2.2472"
     steps:
       - run:
-          command: mkdir -p /tmp/cache/scanner
-          name: Create cache directory if it doesn't exist
-      - restore_cache:
-          keys:
-            - v<<parameters.cache_version>>-sonarcloud-scanner-4.6.2.2472
-      - run:
+          name: "Install Sonarqube scanner"
           command: |
-            set -e
-            VERSION=4.6.2.2472
-            SONAR_TOKEN=$<<parameters.sonar_token_variable_name>>
-            SCANNER_DIRECTORY=/tmp/cache/scanner
-            export SONAR_USER_HOME=$SCANNER_DIRECTORY/.sonar
-            OS="linux"
-            echo $SONAR_USER_HOME
-
-            if [[ ! -x "$SCANNER_DIRECTORY/sonar-scanner-$VERSION-$OS/bin/sonar-scanner" ]]; then
-              curl -Ol https://binaries.sonarsource.com/Distribution/sonar-scanner-cli/sonar-scanner-cli-$VERSION-$OS.zip
-              unzip -qq -o sonar-scanner-cli-$VERSION-$OS.zip -d $SCANNER_DIRECTORY
-            fi
-
-            chmod +x $SCANNER_DIRECTORY/sonar-scanner-$VERSION-$OS/bin/sonar-scanner
-            chmod +x $SCANNER_DIRECTORY/sonar-scanner-$VERSION-$OS/jre/bin/java
-
-            $SCANNER_DIRECTORY/sonar-scanner-$VERSION-$OS/bin/sonar-scanner
-          environment:
-            SONARQUBE_SCANNER_PARAMS: '{"sonar.host.url":"https://sonarcloud.io"}'
-          name: SonarCloud
-      - save_cache:
-          key: v<<parameters.cache_version>>-sonarcloud-scanner-$VERSION
-          paths: /tmp/cache/scanner
+            wget https://binaries.sonarsource.com/Distribution/sonar-scanner-cli/sonar-scanner-cli-<< parameters.engine_version >>.zip
+            unzip sonar-scanner-cli-<< parameters.engine_version >>.zip
+  code-analysis:
+    description: "Run Sonarqube scanner for code analysis"
+    parameters:
+      organization:
+        type: string
+      host_url:
+        type: string
+      login:
+        type: string
+      projectKey:
+        type: string
+      projectBaseDir:
+        type: string
+        default: "/root/circleci-build"
+      sources:
+        type: string
+        default: "."
+      runner_opts:
+        type: string
+        default: "-Xms1024m -Xmx4096m"
+      exclusions:
+        type: string
+        default: "**/*.yaml,**/*.yml"
+      engine_version:
+        type: string
+        default: "4.6.2.2472"
+    steps:
+      - run:
+          name: "Code analysis"
+          command: |
+            export SONAR_RUNNER_OPTS="<< parameters.runner_opts >>"
+            eval ./sonar-scanner-<< parameters.engine_version >>/bin/sonar-scanner \
+              -Dsonar.host.url=${<< parameters.host_url >>} \
+              -Dsonar.login=${<< parameters.login >>} \
+              -Dsonar.projectKey=${<< parameters.projectKey >>} \
+              -Dsonar.projectBaseDir=<< parameters.projectBaseDir >> \
+              -Dsonar.sources=<< parameters.sources >> \
+              -Dsonar.exclusions="<< parameters.exclusions >>"
   
-description: Detect bugs and vulnerabilities in your repository.
-display:
-  home_url: https://www.sonarcloud.io/
-  source_url: https://github.com/SonarSource/sonarcloud-circleci-orb
 jobs:
-  building: 
-    docker:       
-      - image: buildpack-deps:trusty        
-    steps:       
+  analyze:
+    parameters:
+      organization:
+        type: env_var_name
+        default: SONAR_ORGANIZATION
+      host_url:
+        type: env_var_name
+        default: SONAR_URL
+      login:
+        type: env_var_name
+        default: SONAR_TOKEN
+      projectKey:
+        type: env_var_name
+        default: SONAR_PROJECT_KEY #CIRCLE_PROJECT_REPONAME --
+      projectVersion:
+        type: env_var_name
+        default: CIRCLE_BUILD_NUM
+      github_oauth:
+        type: env_var_name
+        default: SONARQUBE_GITHUB_OAUTH
+      github_repository:
+        type: env_var_name
+        default: SONAR_ORGANIZATION
+      github_pullRequest:
+        type: env_var_name
+        default: CIRCLECI_PULL_REQUEST_NUMBER
+    executor: scanner
+    steps:
       - checkout
       - setup-environment
-      - scan
-                        
-                  
+      - install-engine
+      - code-analysis:
+          login: << parameters.login >>
+          host_url: <<parameters.host_url >>
+          organization: << parameters.organization >>
+          projectKey: << parameters.projectKey >>
+          projectBaseDir: ./
+
 workflows:
   build_test_deploy:
     jobs:
-      - building    
+      - analyze
