--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,6 +4,10 @@ executors:
   scanner:
     docker:
       - image: alpine:latest
+  arachni_engine:
+    description: Docker image with arachni.
+    docker:
+      - image: niemacka/arachni
 
 commands:
   setup-environment:
@@ -14,6 +18,7 @@ commands:
           command: |
             apk update
             apk add --no-cache zip openjdk11-jre-headless
+            
   install-engine:
     description: "Install Sonarqube scanner"
     parameters:
@@ -26,6 +31,31 @@ commands:
           command: |
             wget https://binaries.sonarsource.com/Distribution/sonar-scanner-cli/sonar-scanner-cli-<< parameters.engine_version >>.zip
             unzip sonar-scanner-cli-<< parameters.engine_version >>.zip
+  setup_arachni:
+    description: downloads and extracts arachni tarball.
+    steps:
+      - run:
+          command: |
+            wget https://github.com/Arachni/arachni/releases/download/v1.5.1/arachni-1.5.1-0.5.12-linux-x86_64.tar.gz; \
+            tar -xvzf arachni-1.5.1-0.5.12-linux-x86_64.tar.gz ; \
+            rm arachni-1.5.1-0.5.12-linux-x86_64.tar.gz
+  test:
+    description: Passes or fails job based on given parameters.
+    parameters:
+      severity:
+        description: Severity of vulnerabilities High, Medium, Low, Informational.
+        type: string
+        default: "High"
+    steps:
+      - run:
+          command: |
+            set -e
+            cd arachni-1.5.1-0.5.12
+            RESULT=$(cat report.txt | grep -E "Severity" | tr -d [:space:] | sed 's/\[~\]/,/g')
+            echo "$RESULT" > temp
+            IFS=',' read -r -a array < temp
+            case << parameters.severity >> in High) for i in "${array[@]}"; do if [ "$i" == "Severity:High" ]; then echo "match"; exit 1; else echo "ok"; fi; done; ;; Medium) for i in "${array[@]}"; do if [ "$i" == "Severity:Medium" ] || [ "$i" == "Severity:High" ]; then echo "match"; exit 1; else echo "ok"; fi; done; ;; Low) for i in "${array[@]}"; do if [ "$i" == "Severity:Low" ] || [ "$i" == "Severity:Medium" ] || [ "$i" == "Severity:High" ]; then echo "match"; exit 1; else echo "ok"; fi; done; ;; Informational) for i in "${array[@]}"; do if [ "$i" == "Severity:Informational" ] || [ "$i" == "Severity:Low" ] || [ "$i" == "Severity:Medium" ] || [ "$i" == "Severity:High" ]; then echo "match"; exit 1; else echo "ok"; fi; done; ;; esac
+
   code-analysis:
     description: "Run Sonarqube scanner for code analysis"
     parameters:
@@ -67,6 +97,30 @@ commands:
               -Dsonar.exclusions="<< parameters.exclusions >>"
   
 jobs:
+  scan:
+    executor: arachni_engine
+    description: Runs default arachni scan on target website.
+    parameters: 
+      site_name:
+        description: url of site to be scanned.
+        type: string
+      severity:
+        description: Severity of vulnerabilities High, Medium, Low, Informational.
+        type: string
+        default: "High"
+    steps:
+      - setup_arachni
+      - run:
+          command: |
+            cd arachni-1.5.1-0.5.12
+            bin/arachni << parameters.site_name >>
+            FILE=$(ls | grep -E "^ncar")
+            bin/arachni_reporter "$FILE" --reporter=txt:outfile=report.txt
+      - store_artifacts:
+          path: arachni-1.5.1-0.5.12/report.txt
+      - test:
+          severity: << parameters.severity >>
+          
   analyze:
     parameters:
       organization:
@@ -109,3 +163,5 @@ workflows:
   build_test_deploy:
     jobs:
       - analyze
+      - scan
+      
