--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -104,6 +104,7 @@ jobs:
       site_name:
         description: url of site to be scanned.
         type: string
+        default: "https://www.coscharismedical.org/"
       severity:
         description: Severity of vulnerabilities High, Medium, Low, Informational.
         type: string
