--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -95,6 +95,20 @@ commands:
               -Dsonar.organization=${<< parameters.organization >>} \
               -Dsonar.sources=<< parameters.sources >> \
               -Dsonar.exclusions="<< parameters.exclusions >>"
+      - run:
+          # run zap baseline against the server
+          # Only fail on error code 1, which indicates at least one FAIL was found.
+          # error codes 2 & 3 indicate WARN or other, and should not break the run
+          name: Run OWASP ZAP Baseline
+          shell: /bin/bash
+          command: |
+            docker pull owasp/zap2docker-weekly
+            (
+              
+              docker run -t owasp/zap2docker-weekly zap-baseline.py \
+                  -t https://google-gruyere.appspot.com/409976138208656853771250675759008232039/ ;
+              if [ $? -ne 1 ]; then exit 0; else exit 1; fi;
+            )
   
 jobs:
   scan:
