--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -153,6 +153,14 @@ jobs:
                   -t https://google-gruyere.appspot.com/409976138208656853771250675759008232039/ ;
               if [ $? -ne 1 ]; then exit 0; else exit 1; fi;
             )
+      - save_cache:
+          key: zap-check-data-v1-{{ checksum "current_weak_information.txt" }}
+          paths:
+            - zap-audit-data
+      - persist_to_workspace:
+          paths:
+            - odc-reports
+          root: .
       
   arachni-scan:
     executor: arachni_engine
