--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -148,10 +148,8 @@ jobs:
           command: |
             docker pull owasp/zap2docker-stable
             (
-               docker run -i owasp/zap2docker-stable zap-baseline.py \
-                zap-cli quick-scan \
-                --self-contained \
-                --start-options '-config api.disablekey=true' https://google-gruyere.appspot.com/409976138208656853771250675759008232039/
+              docker run -i owasp/zap2docker-stable \
+                zap-cli spider https://google-gruyere.appspot.com/409976138208656853771250675759008232039/
               
                   
               if [ $? -ne 1 ]; then exit 0; else exit 1; fi;
