--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -151,7 +151,8 @@ jobs:
                docker run -i owasp/zap2docker-stable \
                 zap-cli active-scan \
                 --self-contained \
-                --start-options '-config api.disablekey=true' https://google-gruyere.appspot.com/409976138208656853771250675759008232039/
+                --start-options '-config api.disablekey=true' https://google-gruyere.appspot.com/409976138208656853771250675759008232039/ \
+                -l Medium
               
                   
               if [ $? -ne 1 ]; then exit 0; else exit 1; fi;
