--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -152,7 +152,9 @@ jobs:
                 zap-cli quick-scan \
                 --self-contained \
                 --start-options '-config api.disablekey=true' https://google-gruyere.appspot.com/409976138208656853771250675759008232039/ \
-                -l Medium
+                -l Medium \ 
+                -l Low
+
               
                   
               if [ $? -ne 1 ]; then exit 0; else exit 1; fi;
