--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -148,13 +148,16 @@ jobs:
           command: |
             docker pull owasp/zap2docker-stable
             (
-               docker run -i owasp/zap2docker-stable \
+              docker run -i owasp/zap2docker-stable \
                 zap-cli quick-scan \
                 --self-contained \
                 --start-options '-config api.disablekey=true' \
                 --spider\
                 https://google-gruyere.appspot.com/409976138208656853771250675759008232039/ \
-                -l Low 
+                -l Meduim \
+                report -o /zap/reports/owasp-quick-scan-report.html --output-format html
+              
+             
 
               
                   
