--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -154,7 +154,7 @@ jobs:
                 --start-options '-config api.disablekey=true' \
                 --spider\
                 https://google-gruyere.appspot.com/409976138208656853771250675759008232039/ \
-                -l Meduim \
+                -l Medium \
                 report -o /zap/reports/owasp-quick-scan-report.html --output-format html
               
              
