--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -149,8 +149,8 @@ jobs:
             docker pull owasp/zap2docker-stable
             (
               docker run -i owasp/zap2docker-stable \
-                zap-cli quick-scan \
-                report -o owasp-quick-scan-report.html --output-format html\
+                zap-cli report -o owasp-quick-scan-report.html -f html\
+                quick-scan \
                 --self-contained \
                 --start-options '-config api.disablekey=true' \
                 --spider\
