--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -150,7 +150,7 @@ jobs:
             (
               docker run -i owasp/zap2docker-stable \
                 zap-cli report -o owasp-quick-scan-report.html -f html\
-                quick-scan \
+                zap-cli quick-scan \
                 --self-contained \
                 --start-options '-config api.disablekey=true' \
                 --spider\
