--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -149,13 +149,13 @@ jobs:
             docker pull owasp/zap2docker-stable
             (
               docker run -i owasp/zap2docker-stable \
-                zap-cli report -o owasp-quick-scan-report.html -f html\
                 zap-cli quick-scan \
                 --self-contained \
                 --start-options '-config api.disablekey=true' \
                 --spider\
                 https://google-gruyere.appspot.com/409976138208656853771250675759008232039/ \
-                -l Medium 
+                -l Medium\
+                report -o owasp-quick-scan-report.html -f html
                 
               
              
