--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -155,7 +155,7 @@ jobs:
                 --spider\
                 https://google-gruyere.appspot.com/409976138208656853771250675759008232039/ \
                 -l Medium\
-                report -o owasp-quick-scan-report.html -f html
+                && zap-cli report -o owasp-quick-scan-report.html -f html
                 
               
              
