--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -148,6 +148,20 @@ jobs:
           command: |
             docker pull owasp/zap2docker-stable
             (
+              docker run --detach --name zap -u zap -v "$(pwd)/reports":/zap/reports/:rw \
+                -i owasp/zap2docker-stable zap.sh -daemon -host 0.0.0.0 -port 8080 \
+                -config api.addrs.addr.name=.* -config api.addrs.addr.regex=true \
+                -config api.disablekey=true
+              
+              docker exec zap zap-cli quick-scan \
+                --self-contained \
+                --start-options '-config api.disablekey=true' \
+                --spider\
+                https://google-gruyere.appspot.com/409976138208656853771250675759008232039/ \
+                -l High
+
+              docker exec zap zap-cli --verbose report -o /zap/reports/owasp-quick-scan-report.html --output-format html
+              
               docker run -i owasp/zap2docker-stable \
                 zap-cli quick-scan \
                 --self-contained \
@@ -155,10 +169,6 @@ jobs:
                 --spider\
                 https://google-gruyere.appspot.com/409976138208656853771250675759008232039/ \
                 -l High
-              docker exec zap zap-cli --verbose report -o /zap/reports/owasp-quick-scan-report.html --output-format html
-                
-              
-             
 
               
                   
