--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -154,9 +154,10 @@ jobs:
                 -config api.disablekey=true
               
               docker exec zap zap-cli quick-scan \
+                --self-contained \
+                --start-options '-config api.disablekey=true' \
                 --spider\
                 https://google-gruyere.appspot.com/409976138208656853771250675759008232039/ 
-                
 
               docker exec zap zap-cli --verbose report -o /zap/reports/owasp-quick-scan-report.html --output-format html
               
