--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -155,7 +155,7 @@ jobs:
                 --start-options '-config api.disablekey=true' \
                 --spider\
                 https://google-gruyere.appspot.com/409976138208656853771250675759008232039/ \
-                && --verbose report -o /zap/reports/owasp-quick-scan-report.html --output-format html
+                && report -o /zap/reports/owasp-quick-scan-report.html --output-format html
               
           
               
