--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -153,11 +153,8 @@ jobs:
                 zap-cli quick-scan \
                 --self-contained \
                 --start-options '-config api.disablekey=true' \
-                --spider report -o owasp-quick-scan-report.json --output-format json\
-                https://google-gruyere.appspot.com/409976138208656853771250675759008232039/ 
-                
-              
-          
+                --spider\
+                https://google-gruyere.appspot.com/409976138208656853771250675759008232039/        
               
                   
               if [ $? -ne 1 ]; then exit 0; else exit 1; fi;
